tests/tc/neg/union01.js

/*@ foo0 :: ((int|bool)) => int */
function foo0(x) {
  return x;
}

